# spring-hello

./: .bazelproject  .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  WORKSPACE  build.gradle
.buildkite/: pipeline.yml
src/main/java/com/example/demo/: BUILD
src/test/java/com/example/demo/: BUILD  DemoApplicationTests.java
