# Root BUILD file with convenient aliases

alias(
    name = "spring-hello",
    actual = "//src/main/java/com/example/demo:demo",
)

alias(
    name = "spring-hello-lib",
    actual = "//src/main/java/com/example/demo:demo_lib",
)

alias(
    name = "test",
    actual = "//src/test/java/com/example/demo:DemoApplicationTests",
)
